Bug 80895 - Shape in Header&Footer is getting lost after RT
Summary: Shape in Header&Footer is getting lost after RT
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Tushar Bende
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-04 06:42 UTC by Tushar Bende
Modified: 2014-12-28 22:07 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
File on which the issue can be reproduced (22.65 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-07-04 06:42 UTC, Tushar Bende
Details
chart in header RT docx before and after fix (106.37 KB, image/png)
2014-07-22 07:12 UTC, Tushar Bende
Details
chart in header rendered in LO before and after fix (127.59 KB, image/png)
2014-07-22 07:13 UTC, Tushar Bende
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tushar Bende 2014-07-04 06:42:00 UTC
Created attachment 102238 [details]
File on which the issue can be reproduced

Problem description: 

Steps to reproduce:
1. Load the attached DOCX in LO

Current behavior:
File opening without any error but shape not visible.

Expected behavior:
File should open without any error and shape should be visible.


              
Operating System: Ubuntu
Version: 4.4.0.0.alpha0+ Master
              
Operating System: All
Version: 4.4.0.0.alpha0+ Master
Comment 1 Jorendc 2014-07-04 07:57:07 UTC
Synerzip -> NEW
Comment 2 Cor Nouws 2014-07-04 08:08:03 UTC
With some trickery via the navigator one can get something on the screen, in header/footer, but definitely not what is expected ..
Comment 3 Tushar Bende 2014-07-22 07:12:29 UTC
Created attachment 103259 [details]
chart in header RT docx before and after fix
Comment 4 Tushar Bende 2014-07-22 07:13:11 UTC
Created attachment 103260 [details]
chart in header rendered in LO before and after fix
Comment 5 Tushar Bende 2014-07-22 07:13:56 UTC
I made code changes are working as expected:
if there is group shape in header/footer it's fixing that as well.
for chart in header/footer previously there was no color was preserved ,its working after this fix.(attached screenshot for the same)
Comment 6 Commit Notification 2014-08-01 08:44:06 UTC
Tushar Bende committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=194c17a7c7c00f966b0256a1e90d50d8dd49f2bc

fdo#80895 : Shape in Header&Footer is getting lost after RT



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Cor Nouws 2014-12-28 22:07:44 UTC
Thanks Tushar!