fdo#80895 : Shape in Header&Footer is getting lost after RT

If there is a shape in Header or footer in a docx created in MSO-2010 that shape was
getting lost after RT(actually shape was there but it's properties were getting missed).
Root cause was : When LO processes Header it has msRelationFragmentPath= header.xml in
ShapeContextHandler::startFastElement() and searches for theme as there is No theme specific
to header or footer, aThemeFragmentPath becomes empty in that case.
This is because MS office shares same theme for both documentBody as well as Header or footer.

To fix Get Target for Type = "officeDocument" from _rels/.rels file this target is
 "word/document.xml" for docx & to "ppt/presentation.xml" for pptx and use this Target for fetching correct theme.xml.
Tested group shapes in header/footer,previously was not getting rendred and not preserved
 after RT.After this patch it's now working correctly.
Tested chart in header/footer previously chart colour was not coming properly
both during rendering as well as after RT.after this patch it's working correctly.

Reviewed on:
	https://gerrit.libreoffice.org/10451

Change-Id: Id47008550da90c0d697b434b676765230e3258a7